[gd_scene load_steps=5 format=3 uid="uid://cgh847ai16cjw"]

[ext_resource type="Texture2D" uid="uid://bxoiig2prtbbt" path="res://Assets/Art/Sprites/Bullet.png" id="1_bg3ak"]
[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_d7oxd"]
[ext_resource type="AudioStream" uid="uid://3k2nlg8de0jm" path="res://Assets/Sounds/SFX/Projectile.wav" id="3_td7oo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5cutv"]
radius = 12.0416

[node name="Bullet" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_d7oxd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bg3ak")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5cutv")
disabled = true

[node name="VisibleNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["Projectile"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5cutv")

[node name="ProjectileSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_td7oo")
bus = &"SFX"

[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
